--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prestart": "open http://localhost:8080",
     "start": "npm-run-all --parallel security-check start-server lint:watch test:watch",
-    "start-server": "webpack-dev-server -d --hot -w --config webpack.config.dev.js",
+    "start-server": "webpack-dev-server -d --config webpack.config.dev.js",
     "lint": "esw webpack.config.* src scripts --color",
     "lint:watch": "npm run lint -- --watch",
     "security-check": "nsp check",
@@ -38,8 +38,6 @@
     "eslint": "3.8.1",
     "eslint-plugin-import": "2.0.1",
     "eslint-watch": "2.1.14",
-    "extract-text-webpack-plugin": "2.1.0",
-    "html-webpack-plugin": "2.28.0",
     "localtunnel": "1.8.1",
     "mocha": "3.1.2",
     "nock": "8.1.0",
@@ -48,6 +46,8 @@
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
     "webpack": "2.4.1",
+    "extract-text-webpack-plugin": "2.1.0",
+    "html-webpack-plugin": "2.28.0",
     "webpack-md5-hash": "0.0.5"
   }
 }
