--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack": "2.4.1",
     "extract-text-webpack-plugin": "2.1.0",
     "html-webpack-plugin": "2.28.0",
-    "webpack-md5-hash": "0.0.5"
+    "webpack-md5-hash": "0.0.5",
+    "optimize-css-assets-webpack-plugin":"1.3.1"
   }
 }
